// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a default button 1`] = `
<button
  className="css-k73zv0"
>
  
</button>
`;

exports[`renders a loading button 1`] = `
<button
  className="css-k73zv0"
>
  <div
    className="react-spinner-material"
    data-testid="loader"
    style={
      Object {
        "borderColor": "white",
        "borderWidth": 2,
        "height": 24,
        "width": 24,
      }
    }
    type="Oval"
  />
</button>
`;

exports[`renders a secondary button 1`] = `
<button
  className="css-kl71ql"
>
  <div
    className="react-spinner-material"
    data-testid="loader"
    style={
      Object {
        "borderColor": "#675D55",
        "borderWidth": 2,
        "height": 18,
        "width": 18,
      }
    }
    type="Oval"
  />
</button>
`;

exports[`renders a wide button 1`] = `
<button
  className="css-ipe9fh"
>
  
</button>
`;
